js/src/jit-test/tests/binast/invalid/break-outside-while.binjs
BINJS
[
GRAMMAR
]
identity
;
AssertedBlockScope2AssertedScriptGlobalScope
Block
BreakStatement0LiteralBooleanExpression
Script
WhileStatement
[
STRINGS
]
identity
;
[
TREE
]
identity
;
